# super-sumcheck

./: .gitignore  Cargo.toml  LICENSE  README.md  sumcheck_debug.txt
benches/: benchmark.rs  sumcheck_bench.rs
src/: README.md  data_structures.rs  lib.rs  prover.rs  test.rs  transcript.rs  verifier.rs
