[package]
name = "mle_single_poly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false, features = ["derive"] }
ark-std = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
hashbrown = { version = "0.14.0" }
rayon = { version = "1", optional = true }
ark-ec = { version = "0.4.2"}
ark-bls12-381 = {version = "0.4.0"}
rand = "0.8"
merlin ={ version = "3.0.0"}
