[package]
name = "mle_single_poly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false, features = ["derive"] }
ark-std = { version = "0.4.0", default-features = false }
ark-poly = { version = "0.4.0", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
hashbrown = { version = "0.14.0" }
rayon = { version = "1", optional = true }
ark-ec = { version = "0.4.2"}
ark-bls12-381 = {version = "0.4.0"}
ark-bn254 = {version = "0.4.0"}
rand = "0.8"
merlin ={ version = "3.0.0"}

log = "0.4.25"
env_logger = "0.11.6"


[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false